--- a/index.html
+++ b/index.html
@@ -7,6 +7,109 @@
     <link rel="stylesheet" href="./sass/style.css">
 </head>
 <body>
-    
+
+    <div class="content">
+
+        <nav class="content_nav">
+            <img src="./images/logo.svg" alt="">
+
+            <ul>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <span>bars</span>
+        </nav>
+
+        <h1 class="text">
+            Creating purpose-built brands & websites
+        </h1>
+
+        <img src="./images/img1.jpg" alt="picture" class="picture">
+
+        <h1 class="text2">I help emerging brands get their footing in today's digital world.</h1>
+
+        <div class="button_1">
+        <button type="submit">See my work</button>
+        </div>
+
+        <div class="box">
+            <img src="./images/img2.jpg" alt="">
+
+           <div class="right_box">
+
+            <h3 class="right_box_text">My services are perfect for companies that are just getting started</h3>
+
+            <button class="right_box_btn" type="submit">Learn more</button>
+           </div>
+        </div>
+
+        <div class="box2">
+            <div class="left_box">
+
+                <h3 class="left_box_text">I'm always on the go. Follow along!</h3>
+
+                <button type="submit" class="left_box_btn">@aloha</button>
+            </div>
+
+            <img src="./images/img3.jpg" alt="">
+        </div>
+
+        <div class="m-box">
+
+            <h2 class="m-box_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit."</h2>
+
+            <p class="m-box_pie">Full Name, CEO at Client</p>
+        </div>
+
+        <h1 class="text3">Seem like a good fit?</h1>
+
+        <div class="button_1">
+        <button>Let's talk!</button>
+        </div>
+
+        <footer class="footer">
+
+            <div class="f-box">
+
+                <div class="f_box1">
+                    <h4 class="f_box1_text">© Aloha</h4c>
+                    <p class="f_box1_pie">Powered by Webflow</p>
+                    <img src="./images/palma.svg" alt="palma" class="palma">
+                </div>
+
+                <div class="f_boxs">
+                    <div class="f_boxs1">
+                        <p>About</p>
+                        <p>Contact</p>
+                        <p>Licenses</p>
+                        <p>Style Guide</p>
+                        <p>Changelog</p>
+                        <p>Password</p>
+                        <p>404</p>
+                    </div>
+
+                    <div class="f_boxs2">
+                        <p>Home1</p>
+                        <p>Home2</p>
+                        <p>Work1</p>
+                        <p>Work2</p>
+                        <p>Blog1</p>
+                        <p>Blog2</p>
+                    </div>
+
+                    <div class="f_boxs1">
+                        <p>Twitter</p>
+                        <p>Instagram</p>
+                        <p>Facebook</p>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
+
+
+    </div>
 </body>
 </html>
